--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,18 +7,19 @@ stages:
 before_script:
   - "apk update"
   - "apk upgrade"
-  - "apk add git"
+  - "apk add bash git"
+  - ".gitlab-ci/node_js.sh"
   # Based on Travis CI `node_js` language.
   # npm_disable_prefix
-  - "[[ $(command -v sw_vers) && -f .npmrc ]] && npm config delete prefix"
+#  - "[[ $(command -v sw_vers) && -f .npmrc ]] && npm config delete prefix"
   # npm_disable_spinner
-  - "npm config set spin false"
+#  - "npm config set spin false"
   # npm_disable_progress
-  - "npm config set progress false"
+#  - "npm config set progress false"
   # install
-  - "[[ -f package.json && -f yarn.lock ]] && echo 'yarn'"
-  - "[[ (-f package.json && ! -f yarn.lock) && (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm ci'"
-  - "[[ (-f package.json && ! -f yarn.lock) && ! (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm install'"
+#  - "[[ -f package.json && -f yarn.lock ]] && echo 'yarn'"
+#  - "[[ (-f package.json && ! -f yarn.lock) && (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm ci'"
+#  - "[[ (-f package.json && ! -f yarn.lock) && ! (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm install'"
 
 test:
   stage: test
