--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,22 +9,12 @@ before_script:
   - "apk upgrade"
   - "apk add bash git"
   - ".gitlab-ci/node_js.sh"
-  # Based on Travis CI `node_js` language.
-  # npm_disable_prefix
-#  - "[[ $(command -v sw_vers) && -f .npmrc ]] && npm config delete prefix"
-  # npm_disable_spinner
-#  - "npm config set spin false"
-  # npm_disable_progress
-#  - "npm config set progress false"
-  # install
-#  - "[[ -f package.json && -f yarn.lock ]] && echo 'yarn'"
-#  - "[[ (-f package.json && ! -f yarn.lock) && (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm ci'"
-#  - "[[ (-f package.json && ! -f yarn.lock) && ! (-f npm-shrinkwrap.json || -f package-lock.json) ]] && echo 'npm install'"
 
 test:
   stage: test
 
   script:
+    - "env | sort"
     - "git status"
 #    - ".gitlab-ci/test.sh"
 
