--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "lint": "eslint . --config=index.js",
     "release": "standard-version -s",
-    "test": "yarn lint && yarn test:tape",
-    "test:tape": "babel-tape-runner test/*.js | faucet"
+    "test": "yarn lint && yarn test:jest",
+    "test:jest": "jest --coverage"
   },
   "dependencies": {
     "babel-eslint": "^10.0.3",
@@ -35,12 +35,8 @@
     "prettier": "^1.18.2"
   },
   "devDependencies": {
-    "babel-tape-runner": "^3.0.0",
-    "conventional-recommended-bump": "^6.0.0",
-    "faucet": "^0.0.1",
-    "semver": "^6.3.0",
-    "standard-version": "^7.0.0",
-    "tape": "^4.11.0"
+    "jest": "^24.9.0",
+    "standard-version": "^7.0.0"
   },
   "keywords": []
 }
