--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.18.2",
@@ -31,13 +31,22 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^12.0.1",
-    "prettier": "^1.18.2"
+    "eslint-plugin-unicorn": "^14.0.1",
+    "lodash.clonedeep": "^4.5.0",
+    "prettier": "^1.19.1"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^22.17.0",
-    "jest": "^24.9.0",
-    "standard-version": "^7.0.0"
+    "eslint-plugin-jest": "latest",
+    "jest": "latest",
+    "standard-version": "latest",
+    "typescript": "latest"
   },
-  "keywords": []
+  "keywords": [
+    "robyn",
+    "eslint",
+    "config",
+    "prettier",
+    "standard",
+    "unicorn"
+  ]
 }
