fix: remove broken prettier-plugin-sh
prettier-plugin-sh uses mvdan-sh to parse various files, including
ignore files. This results in false errors because mvdan-sh thinks the
passed in file is a shell script, which ignore files are not.

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,9 @@
-/.idea/
-/coverage/
-/node_modules/
-/eslint-config-robyn.iml
-/LICENSE
-/yarn.lock
+.idea/
+coverage/
+node_modules/
+.editorconfig
+.gitattributes
+eslint-config-robyn.iml
+LICENSE
+yarn.lock
+.*ignore
