--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^14.0.1",
     "prettier": "^1.19.1",
-    "prettier-plugin-package": "^0.3.1",
-    "prettier-plugin-sh": "^0.2.4"
+    "prettier-plugin-package": "^0.3.1"
   },
   "devDependencies": {
     "eslint-plugin-jest": "^23.1.1",
