feat: include additional Prettier plugins

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,113 @@
-.idea/
-coverage/
-node_modules/
+$RECYCLE.BIN
+.AppleDB
+.AppleDesktop
+.AppleDouble
+.DS_Store
+.DocumentRevisions-V100
+.LSOverride
+.Spotlight-V100
+.TemporaryItems
+.Trash-*
+.Trashes
+.VolumeIcon.icns
+._*
+.apdisk
+.cache
+.com.apple.timemachine.donotpresent
+.directory
+.dynamodb
 .editorconfig
+.env
+.env.test
+.eslintcache
+.fseventsd
+.fuse_hidden*
+.fusebox
 .gitattributes
-eslint-config-robyn.iml
-LICENSE
-yarn.lock
+.gitlab-ci
+.grunt
+.idea
+.idea_modules
 .*ignore
+.lock-wscript
+.netrwhist
+.next
+.nfs*
+.node_repl_history
+.npm
+.nuxt
+.nyc_output
+.parcel-cache
+.pnp.*
+.rpt2_cache
+.rts2_cache_cjs
+.rts2_cache_es
+.rts2_cache_umd
+.serverless
+.tern-port
+.vscode-test
+.vuepress/dist
+.yarn-integrity
+.yarn/build-state.yml
+.yarn/cache
+.yarn/unplugged
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]*.un~
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+atlassian-ide-plugin.xml
+bin
+bower_components
+build/Release
+cmake-build-*
+com_crashlytics_export_strings.xml
+coverage
+crashlytics-build.properties
+crashlytics.properties
+[Dd]esktop.ini
+dist
+ehthumbs.db
+ehthumbs_vista.db
+fabric.properties
+jspm_packages
+lerna-debug.log*
+lib-cov
+LICENSE
+logs
+Network Trash Folder
+node_modules
+npm-debug.log*
+out
+pids
+pnpm-lock.yaml
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+Session.vim
+Sessionx.vim
+tags
+Temporary Items
+Thumbs.db
+Thumbs.db:encryptable
+web_modules
+yarn-debug.log*
+yarn-error.log*
+
+*.cab
+*.iml
+*.iws
+*.lcov
+*.lnk
+*.log
+*.msi
+*.msix
+*.msm
+*.msp
+*.pid
+*.pid.lock
+*.seed
+*.stackdump
+*.svg
+*.tgz
+*.tsbuildinfo
+*~
