--- a/package.json
+++ b/package.json
@@ -14,10 +14,20 @@
     "url": "https://gitlab.com/jpickwell/eslint-config-robyn/issues"
   },
   "main": "index.js",
+  "engines": {
+    "node": ">= 10",
+    "npm": "No longer used. Please use pnpm.",
+    "pnpm": ">= 4.14.2"
+  },
+  "os": [
+    "darwin",
+    "linux"
+  ],
   "scripts": {
     "format": "prettier --write *",
     "format:check": "prettier --check *",
     "lint": "eslint --cache --report-unused-disable-directives .",
+    "preinstall": "npx only-allow pnpm",
     "release": "standard-version -s",
     "test": "yarn lint && yarn test:jest",
     "test:jest": "jest --coverage"
@@ -28,28 +38,34 @@
     "config",
     "prettier",
     "standard",
-    "unicorn"
+    "unicorn",
+    "php",
+    "ruby",
+    "xml"
   ],
   "dependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
+    "@prettier/plugin-php": "^0.14.1",
+    "@prettier/plugin-ruby": "^0.18.2",
+    "@prettier/plugin-xml": "^0.7.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-markdown": "^1.0.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-markdown": "^1.0.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^14.0.1",
-    "prettier": "^1.19.1",
-    "prettier-plugin-package": "^0.3.1"
+    "eslint-plugin-unicorn": "^20.0.0",
+    "prettier": "2.0.5",
+    "prettier-plugin-package": "^1.0.0"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^23.1.1",
-    "jest": "^24.9.0",
-    "standard-version": "^7.0.1",
-    "typescript": "^3.7.3"
+    "eslint-plugin-jest": "^23.13.1",
+    "jest": "^26.0.1",
+    "standard-version": "^8.0.0",
+    "typescript": "^3.9.3"
   }
 }
