--- a/.prettierignore
+++ b/.prettierignore
@@ -81,7 +81,6 @@ node_modules
 npm-debug.log*
 out
 pids
-pnpm-lock.yaml
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 Session.vim
 Sessionx.vim
@@ -98,6 +97,7 @@ yarn-error.log*
 *.iws
 *.lcov
 *.lnk
+*.lock
 *.log
 *.msi
 *.msix
