--- a/package.json
+++ b/package.json
@@ -15,34 +15,28 @@
   },
   "main": "index.js",
   "engines": {
-    "node": ">= 10",
-    "npm": "No longer used. Please use yarn.",
-    "yarn": ">= 1.22.4"
+    "node": ">= 10"
   },
-  "os": [
-    "darwin",
-    "linux"
-  ],
   "scripts": {
-    "clean": "rm -fr node_modules yarn.lock",
+    "clean": "rm -fr node_modules pnpm-lock.yaml",
     "format": "prettier --write *",
     "format:check": "prettier --check *",
-    "install:clean": "yarn clean && yarn",
-    "lint": "eslint --cache --report-unused-disable-directives .",
-    "preinstall": "npx only-allow yarn",
+    "install:clean": "pnpm run clean && pnpm i",
+    "lint": "eslint --cache -f friendly --report-unused-disable-directives .",
     "release": "standard-version -s",
-    "test": "yarn lint && yarn test:jest",
+    "test": "pnpm run lint && pnpm run test:jest",
     "test:jest": "jest --coverage"
   },
   "keywords": [
-    "robyn",
-    "eslint",
     "config",
-    "prettier",
-    "standard",
-    "unicorn",
+    "eslint",
     "php",
+    "prettier",
+    "robyn",
     "ruby",
+    "standard",
+    "stylelint",
+    "unicorn",
     "xml"
   ],
   "dependencies": {
@@ -62,12 +56,26 @@
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^20.0.0",
     "prettier": "2.0.5",
-    "prettier-plugin-package": "^1.0.0"
+    "prettier-plugin-package": "^1.0.0",
+    "stylelint": "^13.5.0",
+    "stylelint-config-prettier": "^8.0.1",
+    "stylelint-prettier": "^1.1.2"
   },
   "devDependencies": {
+    "eslint-formatter-friendly": "^7.0.0",
     "eslint-plugin-jest": "^23.13.1",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lint-staged": "^10.2.4",
     "standard-version": "^8.0.0",
     "typescript": "^3.9.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   }
 }
