--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^20.1.0",
+    "linguist-languages": "^7.10.0",
     "prettier": "2.0.5",
     "prettier-plugin-package": "^1.0.0",
     "stylelint": "^13.6.1",
