--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eslint-config-robyn",
   "version": "1.2.0",
   "private": false,
-  "description": "Robyn Style - ESLint Shareable Config",
+  "description": "Robyn Style - Shareable Configs",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   "keywords": [
     "config",
     "eslint",
+    "markdown",
     "php",
     "prettier",
     "robyn",
@@ -40,11 +41,11 @@
     "xml"
   ],
   "dependencies": {
-    "@prettier/plugin-php": "^0.14.2",
-    "@prettier/plugin-ruby": "^0.19.0",
-    "@prettier/plugin-xml": "^0.8.0",
+    "@prettier/plugin-php": "^0.14.3",
+    "@prettier/plugin-ruby": "^0.20.0",
+    "@prettier/plugin-xml": "^0.12.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.4.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-babel": "^5.3.1",
@@ -54,22 +55,22 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^20.1.0",
+    "eslint-plugin-unicorn": "^21.0.0",
     "linguist-languages": "^7.10.0",
-    "prettier": "2.0.5",
+    "prettier": "^2.1.1",
     "prettier-plugin-package": "^1.0.0",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-prettier": "^1.1.2"
   },
   "devDependencies": {
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-jest": "^23.20.0",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "lint-staged": "^10.2.11",
-    "standard-version": "^8.0.1",
-    "typescript": "^3.9.6"
+    "jest": "^26.4.2",
+    "lint-staged": "^10.2.13",
+    "standard-version": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "husky": {
     "hooks": {
