--- a/package.json
+++ b/package.json
@@ -1,76 +1,86 @@
 {
   "name": "eslint-config-robyn",
   "version": "1.3.0",
-  "private": false,
   "description": "Robyn Style - Shareable Configs",
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/jpickwell/eslint-config-robyn.git"
   },
-  "author": "Jordan Pickwell",
   "homepage": "https://gitlab.com/jpickwell/eslint-config-robyn#readme",
   "bugs": {
     "url": "https://gitlab.com/jpickwell/eslint-config-robyn/issues"
   },
-  "main": "index.js",
+  "author": "Jordan Pickwell",
+  "license": "MIT",
+  "private": false,
   "engines": {
     "node": ">= 10"
   },
-  "scripts": {
-    "clean": "rm -fr node_modules pnpm-lock.yaml",
-    "format": "prettier --write *",
-    "format:check": "prettier --check *",
-    "install:clean": "pnpm run clean && pnpm i",
-    "lint": "eslint --cache -f friendly --report-unused-disable-directives .",
-    "release": "standard-version -s",
-    "test": "pnpm run lint && pnpm run test:jest",
-    "test:jest": "jest --coverage"
-  },
+  "main": "index.js",
   "keywords": [
     "config",
     "eslint",
+    "lint",
     "markdown",
     "php",
     "prettier",
     "robyn",
     "ruby",
     "standard",
+    "standard style",
+    "style",
     "stylelint",
     "unicorn",
     "xml"
   ],
+  "scripts": {
+    "clean": "rm -fr node_modules pnpm-lock.yaml",
+    "format": "prettier --ignore-unknown --write '*'",
+    "format:check": "prettier --ignore-unknown --check '*'",
+    "install:clean": "pnpm run clean && pnpm i",
+    "lint": "eslint --cache -f friendly --report-unused-disable-directives .",
+    "lint:config": "eslint --print-config index.js",
+    "pnpm:update": "npm i -g pnpm",
+    "release": "standard-version -s",
+    "test": "pnpm run lint && pnpm run test:jest",
+    "test:jest": "jest --coverage"
+  },
   "dependencies": {
-    "@prettier/plugin-php": "^0.14.3",
-    "@prettier/plugin-ruby": "^0.20.0",
-    "@prettier/plugin-xml": "^0.12.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-markdown": "^1.0.2",
+    "@prettier/plugin-php": "^0.17.2",
+    "@prettier/plugin-ruby": "^1.6.1",
+    "@prettier/plugin-xml": "^0.13.1",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-lodash": "^7.2.0",
+    "eslint-plugin-markdown": "^2.2.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^21.0.0",
-    "linguist-languages": "^7.10.0",
-    "prettier": "^2.1.1",
-    "prettier-plugin-package": "^1.0.0",
-    "stylelint": "^13.7.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-unicorn": "^34.0.1",
+    "eslint-plugin-vue": "^7.13.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
+    "eslint-plugin-you-dont-need-momentjs": "^1.6.0",
+    "linguist-languages": "^7.15.0",
+    "lodash": "^4.17.21",
+    "prettier": "^2.3.2",
+    "prettier-plugin-pkg": "^0.10.0",
+    "prettier-plugin-sh": "^0.7.1",
+    "prettier-plugin-sql": "^0.3.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-prettier": "^1.1.2"
+    "stylelint-prettier": "^1.2.0"
   },
   "devDependencies": {
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "lint-staged": "^10.2.13",
-    "standard-version": "^9.0.0",
-    "typescript": "^4.0.2"
+    "eslint-plugin-jest": "^24.3.6",
+    "husky": "^7.0.1",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
+    "mrm": "^3.0.2",
+    "standard-version": "^9.3.0",
+    "typescript": "^4.3.5"
   },
   "husky": {
     "hooks": {
