--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-jest": "^24.3.6",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "lint-staged": "^11.0.1",
     "standard-version": "^9.3.0",
     "typescript": "^4.3.5"
   },
