ci: add testing jobs to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,3 +7,20 @@ stages:
 
 sast:
   stage: test
+
+before_script:
+  - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
+  - pnpm config set store-dir .pnpm-store
+  - pnpm install
+
+'node:12':
+  image: 'node:12'
+  stage: test
+  script:
+    - pnpm test
+
+'node:14':
+  image: 'node:14'
+  stage: test
+  script:
+    - pnpm test
