--- a/package.json
+++ b/package.json
@@ -14,75 +14,140 @@
   "license": "MIT",
   "private": false,
   "engines": {
-    "node": ">= 10"
+    "node": ">= 12"
   },
   "main": "index.js",
   "keywords": [
+    "check",
+    "checker",
+    "code",
+    "code checker",
+    "code linter",
+    "code standards",
+    "code style",
+    "comment",
     "config",
+    "date-fns",
+    "dayjs",
+    "enforce",
     "eslint",
+    "eslintconfig",
+    "hint",
+    "import",
+    "jscs",
+    "jshint",
     "lint",
+    "lodash",
+    "luxon",
     "markdown",
+    "moment-js",
+    "momentjs",
+    "node",
     "php",
+    "policy",
     "prettier",
+    "promise",
+    "quality",
     "robyn",
     "ruby",
-    "standard",
-    "standard style",
+    "security",
+    "shell",
+    "simple",
+    "sql",
     "style",
+    "style checker",
+    "style linter",
     "stylelint",
+    "TypeScript",
     "unicorn",
-    "xml"
+    "verify",
+    "vue",
+    "xml",
+    "you-dont-need"
   ],
   "scripts": {
     "clean": "rm -fr node_modules pnpm-lock.yaml",
-    "format": "prettier --ignore-unknown --write '*'",
-    "format:check": "prettier --ignore-unknown --check '*'",
+    "eslint": "eslint -f friendly --max-warnings 0",
+    "eslint:config": "eslint --print-config",
+    "find-deprecated-rules": "node tests/deprecated.js",
+    "find-new-rules": "eslint-find-rules -i deprecated --unused configs/all.js",
+    "find-unset-rules": "node tests/unset.js",
+    "format": "pnpm run prettier -- --write '*'",
+    "format:check": "pnpm run prettier -- --check '*'",
+    "ignore-sync": "ignore-sync .",
     "install:clean": "pnpm run clean && pnpm i",
-    "lint": "eslint --cache -f friendly --report-unused-disable-directives .",
-    "lint:config": "eslint --print-config index.js",
-    "pnpm:update": "npm i -g pnpm",
-    "prepare": "husky install",
+    "lint": "pnpm run eslint -- .",
+    "lint:config": "pnpm run eslint:config -- index.js",
+    "lint:editorconfig": "editorconfig-checker",
+    "prepare": "is-ci || husky install",
+    "prettier": "prettier --ignore-unknown",
     "release": "standard-version -s",
-    "test": "pnpm run lint && pnpm run test:jest",
-    "test:jest": "jest --coverage"
+    "test": "run-s find-new-rules find-deprecated-rules lint"
+  },
+  "peerDependencies": {
+    "eslint": "^7.32.0",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
+  },
+  "peerDependenciesMeta": {
+    "typescript": {
+      "optional": true
+    }
   },
   "dependencies": {
-    "@prettier/plugin-php": "^0.17.2",
-    "@prettier/plugin-ruby": "^1.6.1",
-    "@prettier/plugin-xml": "^0.13.1",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-lodash": "^7.2.0",
-    "eslint-plugin-markdown": "^2.2.0",
+    "@prettier/plugin-php": "^0.17.5",
+    "@prettier/plugin-ruby": "^2.0.0",
+    "@prettier/plugin-xml": "^1.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "confusing-browser-globals": "^1.0.10",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-fp": "^2.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-jest-formatting": "^3.0.0",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
+    "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-unicorn": "^34.0.1",
-    "eslint-plugin-vue": "^7.13.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
-    "eslint-plugin-you-dont-need-momentjs": "^1.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-testing-library": "^5.0.0",
+    "eslint-plugin-unicorn": "^37.0.1",
+    "eslint-plugin-vue": "^8.0.1",
+    "eslint-plugin-vue-scoped-css": "^2.0.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "github:jpickwell/You-Dont-Need-Lodash-Underscore#lodash-fp-support",
+    "glob": "^7.2.0",
+    "globals": "^13.12.0",
     "linguist-languages": "^7.15.0",
     "lodash": "^4.17.21",
-    "prettier": "^2.3.2",
     "prettier-plugin-pkg": "^0.10.0",
     "prettier-plugin-sh": "^0.7.1",
     "prettier-plugin-sql": "^0.3.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
+    "read-pkg-up": "^7.0.1",
+    "stylelint": "^14.0.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-prettier": "^1.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@types/eslint": "^7.28.2",
+    "editorconfig-checker": "^4.0.2",
+    "eslint": "^7.32.0",
+    "eslint-find-rules": "^3.6.1",
     "eslint-formatter-friendly": "^7.0.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
-    "lint-staged": "^11.0.1",
-    "standard-version": "^9.3.0",
-    "typescript": "^4.3.5"
-  },
-  "lint-staged": {
-    "*": "prettier --write"
+    "husky": "^7.0.4",
+    "ignore-sync": "^4.0.0",
+    "is-ci": "^3.0.1",
+    "jest": "^27.3.1",
+    "lint-staged": "^11.2.6",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
+    "standard-version": "^9.3.2",
+    "typescript": "^4.4.4",
+    "vue-eslint-parser": "^8.0.0"
   }
 }
