--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ sast:
 before_script:
   - apk update
   - apk upgrade
-  - apk add bash git
+  - apk add bash curl git nodejs
   - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
   - pnpm config set store-dir .pnpm-store
   - .gitlab-ci/node_js.sh
