--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,33 +4,32 @@ include:
 
 stages:
   - test
+  - security
 
 sast:
-  stage: test
+  stage: security
 
-before_script:
-  - whoami
-  - apk update
-  - apk upgrade
-  - apk add bash curl git nodejs
-  - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
-  - pnpm config set store-dir .pnpm-store
-  - .gitlab-ci/node_js.sh
+.test_script:
+  script:
+    - apk update
+    - apk upgrade
+    - apk add bash curl git nodejs
+    - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
+    - pnpm config set store-dir .pnpm-store
+    - .gitlab-ci/node_js.sh
+    - .gitlab-ci/test.sh
 
 'node:12':
+  extends: .test_script
   image: 'node:12-alpine'
   stage: test
-  script:
-    - .gitlab-ci/test.sh
 
 'node:14':
+  extends: .test_script
   image: 'node:14-alpine'
   stage: test
-  script:
-    - .gitlab-ci/test.sh
 
 'node:16':
+  extends: .test_script
   image: 'node:16-alpine'
   stage: test
-  script:
-    - .gitlab-ci/test.sh
