--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "lint": "pnpm run eslint -- .",
     "lint:config": "pnpm run eslint:config -- index.js",
     "lint:editorconfig": "editorconfig-checker",
-    "prepare": "is-ci || husky install",
+    "postinstall": "is-ci || husky install",
     "prettier": "prettier --ignore-unknown",
     "release": "standard-version -s",
     "test": "run-s find-new-rules find-deprecated-rules lint"
@@ -95,11 +95,11 @@
     }
   },
   "dependencies": {
-    "@prettier/plugin-php": "^0.17.5",
+    "@prettier/plugin-php": "^0.17.6",
     "@prettier/plugin-ruby": "^2.0.0",
     "@prettier/plugin-xml": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "confusing-browser-globals": "^1.0.10",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-fp": "^2.3.0",
@@ -116,7 +116,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-testing-library": "^5.0.0",
     "eslint-plugin-unicorn": "^37.0.1",
-    "eslint-plugin-vue": "^8.0.1",
+    "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vue-scoped-css": "^2.0.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "github:jpickwell/You-Dont-Need-Lodash-Underscore#lodash-fp-support",
     "glob": "^7.2.0",
@@ -132,8 +132,8 @@
     "stylelint-prettier": "^1.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
+    "@commitlint/cli": "^14.1.0",
+    "@commitlint/config-conventional": "^14.1.0",
     "@types/eslint": "^7.28.2",
     "editorconfig-checker": "^4.0.2",
     "eslint": "^7.32.0",
@@ -148,6 +148,6 @@
     "prettier": "^2.4.1",
     "standard-version": "^9.3.2",
     "typescript": "^4.4.4",
-    "vue-eslint-parser": "^8.0.0"
+    "vue-eslint-parser": "^8.0.1"
   }
 }
