fix: make husky install only work in dev

--- a/package.json
+++ b/package.json
@@ -72,14 +72,16 @@
     "find-deprecated-rules": "node tests/deprecated.js",
     "find-new-rules": "eslint-find-rules -i deprecated --unused configs/all.js",
     "find-unset-rules": "node tests/unset.js",
-    "format": "pnpm run prettier -- --write '*'",
-    "format:check": "pnpm run prettier -- --check '*'",
+    "format": "run-s prettier -- --write '*'",
+    "format:check": "run-s prettier -- --check '*'",
+    "husky:install": "is-ci || husky install",
     "ignore-sync": "ignore-sync .",
-    "install:clean": "pnpm run clean && pnpm i",
-    "lint": "pnpm run eslint -- .",
-    "lint:config": "pnpm run eslint:config -- index.js",
+    "install:clean": "run-s clean && pnpm i",
+    "is-dependency": "node scripts/is-dependency.js",
+    "lint": "run-s eslint -- .",
+    "lint:config": "run-s eslint:config -- index.js",
     "lint:editorconfig": "editorconfig-checker",
-    "postinstall": "is-ci || husky install",
+    "prepare": "npm run is-dependency || npm run husky:install",
     "prettier": "prettier --ignore-unknown",
     "release": "standard-version -s",
     "test": "run-s find-new-rules find-deprecated-rules lint"
