--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,36 @@
 ---
 include:
-  - template: Security/SAST.gitlab-ci.yml
+    -
+        template: Security/SAST.gitlab-ci.yml
 
 stages:
-  - test
-  - security
+    - test
+    - security
 
 sast:
-  stage: security
+    stage: security
 
 .test_script:
-  script:
-    - apk update
-    - apk upgrade
-    - apk add bash curl git nodejs
-    - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
-    - pnpm config set store-dir .pnpm-store
-    - .gitlab-ci/node_js.sh
-    - .gitlab-ci/test.sh
+    script:
+        - apk update
+        - apk upgrade
+        - apk add bash curl git nodejs
+        - 'curl -f https://get.pnpm.io/v6.14.js | node - add --global pnpm@6'
+        - pnpm config set store-dir .pnpm-store
+        - .gitlab-ci/node_js.sh
+        - .gitlab-ci/test.sh
 
 'node:12':
-  extends: .test_script
-  image: 'node:12-alpine'
-  stage: test
+    extends: .test_script
+    image: 'node:12-alpine'
+    stage: test
 
 'node:14':
-  extends: .test_script
-  image: 'node:14-alpine'
-  stage: test
+    extends: .test_script
+    image: 'node:14-alpine'
+    stage: test
 
 'node:16':
-  extends: .test_script
-  image: 'node:16-alpine'
-  stage: test
+    extends: .test_script
+    image: 'node:16-alpine'
+    stage: test
