--- a/package.json
+++ b/package.json
@@ -1,155 +1,159 @@
 {
-  "name": "eslint-config-robyn",
-  "version": "2.1.3",
-  "description": "Robyn Style - Shareable Configs",
-  "repository": {
-    "type": "git",
-    "url": "git+https://gitlab.com/jpickwell/eslint-config-robyn.git"
-  },
-  "homepage": "https://gitlab.com/jpickwell/eslint-config-robyn#readme",
-  "bugs": {
-    "url": "https://gitlab.com/jpickwell/eslint-config-robyn/issues"
-  },
-  "author": "Jordan Pickwell",
-  "license": "MIT",
-  "private": false,
-  "engines": {
-    "node": ">= 12"
-  },
-  "main": "index.js",
-  "keywords": [
-    "check",
-    "checker",
-    "code",
-    "code checker",
-    "code linter",
-    "code standards",
-    "code style",
-    "comment",
-    "config",
-    "date-fns",
-    "dayjs",
-    "enforce",
-    "eslint",
-    "eslintconfig",
-    "hint",
-    "import",
-    "jscs",
-    "jshint",
-    "lint",
-    "lodash",
-    "luxon",
-    "markdown",
-    "moment-js",
-    "momentjs",
-    "node",
-    "php",
-    "policy",
-    "prettier",
-    "promise",
-    "quality",
-    "robyn",
-    "ruby",
-    "security",
-    "shell",
-    "simple",
-    "sql",
-    "style",
-    "style checker",
-    "style linter",
-    "stylelint",
-    "TypeScript",
-    "unicorn",
-    "verify",
-    "vue",
-    "xml",
-    "you-dont-need"
-  ],
-  "scripts": {
-    "clean": "rm -fr node_modules pnpm-lock.yaml",
-    "eslint": "eslint -f friendly --max-warnings 0",
-    "eslint:config": "eslint --print-config",
-    "find-deprecated-rules": "node tests/deprecated.js",
-    "find-new-rules": "eslint-find-rules -i deprecated --unused configs/all.js",
-    "find-unset-rules": "node tests/unset.js",
-    "format": "run-s prettier -- --write '*'",
-    "format:check": "run-s prettier -- --check '*'",
-    "husky:install": "is-ci || husky install",
-    "ignore-sync": "ignore-sync .",
-    "install:clean": "run-s clean && pnpm i",
-    "is-dependency": "node scripts/is-dependency.js",
-    "lint": "run-s eslint -- .",
-    "lint:config": "run-s eslint:config -- index.js",
-    "lint:editorconfig": "editorconfig-checker",
-    "prepare": "npm run is-dependency || npm run husky:install",
-    "prettier": "prettier --ignore-unknown",
-    "release": "standard-version -s",
-    "test": "run-s find-new-rules find-deprecated-rules lint"
-  },
-  "peerDependencies": {
-    "eslint": "^7.32.0",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
-  },
-  "peerDependenciesMeta": {
-    "typescript": {
-      "optional": true
-    }
-  },
-  "dependencies": {
-    "@prettier/plugin-php": "^0.17.6",
-    "@prettier/plugin-ruby": "^2.0.0",
-    "@prettier/plugin-xml": "^1.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.3.0",
-    "@typescript-eslint/parser": "^5.3.0",
-    "confusing-browser-globals": "^1.0.10",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-fp": "^2.3.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-jest-dom": "^3.9.2",
-    "eslint-plugin-jest-formatting": "^3.0.0",
-    "eslint-plugin-lodash-fp": "^2.2.0-a1",
-    "eslint-plugin-markdown": "^2.2.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.1",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-testing-library": "^5.0.0",
-    "eslint-plugin-unicorn": "^37.0.1",
-    "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vue-scoped-css": "^2.0.0",
-    "eslint-plugin-you-dont-need-lodash-underscore": "github:jpickwell/You-Dont-Need-Lodash-Underscore#lodash-fp-support",
-    "glob": "^7.2.0",
-    "globals": "^13.12.0",
-    "linguist-languages": "^7.15.0",
-    "lodash": "^4.17.21",
-    "prettier-plugin-pkg": "^0.10.0",
-    "prettier-plugin-sh": "^0.7.1",
-    "prettier-plugin-sql": "^0.3.0",
-    "read-pkg-up": "^7.0.1",
-    "stylelint": "^14.0.1",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-prettier": "^1.2.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^14.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@types/eslint": "^7.28.2",
-    "editorconfig-checker": "^4.0.2",
-    "eslint": "^7.32.0",
-    "eslint-find-rules": "^3.6.1",
-    "eslint-formatter-friendly": "^7.0.0",
-    "husky": "^7.0.4",
-    "ignore-sync": "^4.0.0",
-    "is-ci": "^3.0.1",
-    "jest": "^27.3.1",
-    "lint-staged": "^11.2.6",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
-    "standard-version": "^9.3.2",
-    "typescript": "^4.4.4",
-    "vue-eslint-parser": "^8.0.1"
-  }
+	"name": "eslint-config-robyn",
+	"version": "2.1.3",
+	"description": "Robyn Style - Shareable Configs",
+	"repository": {
+		"type": "git",
+		"url": "git+https://gitlab.com/jpickwell/eslint-config-robyn.git"
+	},
+	"homepage": "https://gitlab.com/jpickwell/eslint-config-robyn#readme",
+	"bugs": {
+		"url": "https://gitlab.com/jpickwell/eslint-config-robyn/issues"
+	},
+	"author": "Jordan Pickwell",
+	"license": "MIT",
+	"private": false,
+	"engines": {
+		"node": ">= 16"
+	},
+	"main": "index.js",
+	"keywords": [
+		"check",
+		"checker",
+		"code",
+		"code checker",
+		"code linter",
+		"code standards",
+		"code style",
+		"comment",
+		"config",
+		"date-fns",
+		"dayjs",
+		"enforce",
+		"eslint",
+		"eslintconfig",
+		"hint",
+		"import",
+		"jscs",
+		"jshint",
+		"lint",
+		"lodash",
+		"luxon",
+		"markdown",
+		"moment-js",
+		"momentjs",
+		"node",
+		"php",
+		"policy",
+		"prettier",
+		"promise",
+		"quality",
+		"robyn",
+		"ruby",
+		"scoped css",
+		"security",
+		"shell",
+		"simple",
+		"sql",
+		"style",
+		"style checker",
+		"style linter",
+		"stylelint",
+		"TypeScript",
+		"unicorn",
+		"verify",
+		"vue",
+		"xml",
+		"you-dont-need"
+	],
+	"scripts": {
+		"clean": "rm -fr node_modules pnpm-lock.yaml",
+		"eslint": "eslint -f friendly --max-warnings 0",
+		"eslint:config": "eslint --print-config",
+		"find-deprecated-rules": "node tests/deprecated.js",
+		"find-new-rules": "eslint-find-rules -i deprecated -u configs/all.js",
+		"find-unset-rules": "node tests/unset.js",
+		"format": "pnpm prettier -- -w '*'",
+		"format:check": "pnpm prettier -- -c '*'",
+		"husky:install": "is-ci || husky install",
+		"ignore-sync": "ignore-sync .",
+		"install:clean": "pnpm clean && pnpm i",
+		"is-dependency": "node scripts/is-dependency.js",
+		"lint": "pnpm eslint '.*.{cjs,js,md}' '*.{cjs,js,md}'",
+		"lint:config": "pnpm eslint:config index.js",
+		"prepare": "npm run is-dependency || npm run husky:install",
+		"prettier": "prettier -u",
+		"release": "standard-version -s",
+		"test": "run-s find-new-rules find-deprecated-rules lint"
+	},
+	"peerDependencies": {
+		"eslint": "^8.15.0",
+		"prettier": "^2.6.2",
+		"typescript": "^4.6.4",
+		"vue-eslint-parser": "^9.0.2"
+	},
+	"peerDependenciesMeta": {
+		"typescript": {
+			"optional": true
+		},
+		"vue-eslint-parser": {
+			"optional": true
+		}
+	},
+	"dependencies": {
+		"@prettier/plugin-php": "^0.18.4",
+		"@prettier/plugin-ruby": "^3.1.2",
+		"@prettier/plugin-xml": "^2.2.0",
+		"@typescript-eslint/eslint-plugin": "^5.25.0",
+		"@typescript-eslint/parser": "^5.25.0",
+		"confusing-browser-globals": "^1.0.11",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jest": "^26.2.2",
+		"eslint-plugin-jest-dom": "^4.0.1",
+		"eslint-plugin-jest-formatting": "^3.1.0",
+		"eslint-plugin-lodash": "^7.4.0",
+		"eslint-plugin-markdown": "^2.2.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-security": "^1.5.0",
+		"eslint-plugin-simple-import-sort": "^7.0.0",
+		"eslint-plugin-testing-library": "^5.5.0",
+		"eslint-plugin-unicorn": "^42.0.0",
+		"eslint-plugin-vue": "^9.0.1",
+		"eslint-plugin-vue-scoped-css": "^2.2.0",
+		"eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
+		"glob": "^8.0.3",
+		"globals": "^13.15.0",
+		"linguist-languages": "^7.15.0",
+		"lodash": "^4.17.21",
+		"prettier-plugin-pkg": "^0.13.1",
+		"prettier-plugin-sh": "^0.11.0",
+		"prettier-plugin-sql": "^0.6.1",
+		"read-pkg-up": "^7.0.1",
+		"stylelint": "^14.8.2",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-prettier": "^2.0.0"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.0.0",
+		"@commitlint/config-conventional": "^17.0.0",
+		"@types/eslint": "^8.4.2",
+		"eslint": "^8.15.0",
+		"eslint-find-rules": "^4.1.0",
+		"eslint-formatter-friendly": "^7.0.0",
+		"husky": "^8.0.1",
+		"ignore-sync": "^5.0.1",
+		"is-ci": "^3.0.1",
+		"jest": "^28.1.0",
+		"lint-staged": "^12.4.1",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.6.2",
+		"standard-version": "^9.5.0",
+		"synchronized-promise": "^0.3.1",
+		"typescript": "^4.6.4",
+		"vue-eslint-parser": "^9.0.2"
+	}
 }
