--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ sast:
     script:
         - apk update
         - apk upgrade
-        - apk add bash curl git python3
+        - apk add bash build-base curl git python3
         - corepack enable
         - corepack prepare --activate pnpm@7.1.0
         - pnpm config set store-dir .pnpm-store
