feat: update dependencies

--- a/package.json
+++ b/package.json
@@ -68,18 +68,18 @@
 	],
 	"scripts": {
 		"clean": "rm -fr node_modules pnpm-lock.yaml",
-		"eslint": "eslint -f friendly --max-warnings 0",
+		"eslint": "eslint -f friendly --color --max-warnings 0 --no-error-on-unmatched-pattern",
 		"eslint:config": "eslint --print-config",
 		"find-deprecated-rules": "node tests/deprecated.js",
 		"find-new-rules": "eslint-find-rules -i deprecated -u configs/all.js",
 		"find-unset-rules": "node tests/unset.js",
-		"format": "pnpm prettier -- -w '*'",
-		"format:check": "pnpm prettier -- -c '*'",
+		"format": "pnpm prettier -w '{**/.*,.*,**/*,*}'",
+		"format:check": "pnpm prettier -c '{**/.*,.*,**/*,*}'",
 		"husky:install": "is-ci || husky install",
 		"ignore-sync": "ignore-sync .",
 		"install:clean": "pnpm clean && pnpm i",
 		"is-dependency": "node scripts/is-dependency.js",
-		"lint": "pnpm eslint '.*.{cjs,js,md}' '*.{cjs,js,md}'",
+		"lint": "pnpm eslint '{**/.*,.*,**/*,*}.{cjs,html,js,md,mjs,ts,vue}'",
 		"lint:config": "pnpm eslint:config index.js",
 		"prepare": "npm run is-dependency || npm run husky:install",
 		"prettier": "prettier -u",
@@ -111,7 +111,7 @@
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.2.2",
-		"eslint-plugin-jest-dom": "^4.0.1",
+		"eslint-plugin-jest-dom": "^4.0.2",
 		"eslint-plugin-jest-formatting": "^3.1.0",
 		"eslint-plugin-lodash": "^7.4.0",
 		"eslint-plugin-markdown": "^2.2.1",
@@ -129,11 +129,11 @@
 		"globals": "^13.15.0",
 		"linguist-languages": "^7.15.0",
 		"lodash": "^4.17.21",
-		"prettier-plugin-pkg": "^0.13.1",
+		"prettier-plugin-pkg": "^0.13.2",
 		"prettier-plugin-sh": "^0.11.0",
 		"prettier-plugin-sql": "^0.6.1",
 		"read-pkg-up": "^7.0.1",
-		"stylelint": "^14.8.2",
+		"stylelint": "^14.8.3",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-prettier": "^2.0.0"
 	},
@@ -141,7 +141,7 @@
 		"@commitlint/cli": "^17.0.0",
 		"@commitlint/config-conventional": "^17.0.0",
 		"@types/eslint": "^8.4.2",
-		"eslint": "^8.15.0",
+		"eslint": "^8.16.0",
 		"eslint-find-rules": "^4.1.0",
 		"eslint-formatter-friendly": "^7.0.0",
 		"husky": "^8.0.1",
