--- a/package.json
+++ b/package.json
@@ -101,13 +101,14 @@
 		}
 	},
 	"dependencies": {
-		"@prettier/plugin-php": "^0.18.4",
+		"@prettier/plugin-php": "^0.18.5",
 		"@prettier/plugin-ruby": "^3.1.2",
 		"@prettier/plugin-xml": "^2.2.0",
-		"@typescript-eslint/eslint-plugin": "^5.25.0",
-		"@typescript-eslint/parser": "^5.25.0",
+		"@typescript-eslint/eslint-plugin": "^5.26.0",
+		"@typescript-eslint/parser": "^5.26.0",
 		"confusing-browser-globals": "^1.0.11",
 		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^2.7.1",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.2.2",
