--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ sast:
         -
             if: $CI_COMMIT_TAG
             when: never
+        -
+            when: on_success
     stage: security
 
 .test_script:
@@ -32,6 +34,8 @@ sast:
         -
             if: $CI_COMMIT_TAG
             when: never
+        -
+            when: on_success
     stage: test
 
 'node:18':
@@ -41,4 +45,6 @@ sast:
         -
             if: $CI_COMMIT_TAG
             when: never
+        -
+            when: on_success
     stage: test
