--- a/package.json
+++ b/package.json
@@ -110,33 +110,16 @@
 		"eslint-plugin-unicorn": "^42.0.0",
 		"eslint-plugin-vue": "^9.1.1",
 		"eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
-		"eslint-plugin-you-dont-need-momentjs": "^1.6.0",
 		"glob": "^8.0.3",
 		"globals": "^13.15.0",
 		"linguist-languages": "^7.21.0",
 		"lodash": "^4.17.21",
-		"postcss": "^8.4.14",
-		"postcss-html": "^1.4.1",
-		"postcss-scss": "^4.0.4",
 		"prettier": "^2.7.1",
 		"prettier-plugin-pkg": "^0.13.2",
 		"prettier-plugin-sh": "^0.10.2",
 		"prettier-plugin-sql": "^0.7.0",
 		"read-pkg-up": "^7.0.1",
-		"stylelint": "^14.9.1",
-		"stylelint-config-html": "^1.0.0",
-		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-recommended": "^8.0.0",
-		"stylelint-config-recommended-scss": "^6.0.0",
-		"stylelint-config-recommended-vue": "^1.4.0",
-		"stylelint-config-standard": "^26.0.0",
-		"stylelint-config-standard-scss": "^4.0.0",
-		"stylelint-config-standard-vue": "^1.0.0",
-		"stylelint-order": "^5.0.0",
-		"stylelint-prettier": "^2.0.0",
-		"stylelint-scss": "^4.2.0",
-		"typescript": "^4.7.3",
-		"webpack": "^5.73.0"
+		"typescript": "^4.7.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.2",
@@ -151,7 +134,22 @@
 		"ignore-sync": "^5.0.1",
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.0.2",
+		"postcss": "^8.4.14",
+		"postcss-html": "^1.4.1",
+		"postcss-scss": "^4.0.4",
 		"standard-version": "^9.5.0",
+		"stylelint": "^14.9.1",
+		"stylelint-config-html": "^1.0.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recommended": "^8.0.0",
+		"stylelint-config-recommended-scss": "^6.0.0",
+		"stylelint-config-recommended-vue": "^1.4.0",
+		"stylelint-config-standard": "^26.0.0",
+		"stylelint-config-standard-scss": "^4.0.0",
+		"stylelint-config-standard-vue": "^1.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-prettier": "^2.0.0",
+		"stylelint-scss": "^4.2.0",
 		"synchronized-promise": "^0.3.1",
 		"vue-eslint-parser": "^9.0.2"
 	}
