--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,13 @@
 name: CI
 on:
-    - push
-    - pull_request
+    push:
+        branches:
+            - main
+    pull_request:
+        types:
+            - opened
+            - reopened
+            - synchronize
 jobs:
     test:
         name: Node.js ${{ matrix.node-version }}
