--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
 name: CI
 on:
-    push:
-        branches:
-            - main
     pull_request:
         types:
             - opened
             - reopened
             - synchronize
+    push:
+        branches:
+            - main
 jobs:
     test:
-        name: Node.js ${{ matrix.node-version }}
+        name: "Node.js ${{ matrix.node-version }}"
         runs-on: ubuntu-latest
         strategy:
             fail-fast: false
@@ -22,9 +22,9 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v2
               with:
-                  node-version: ${{ matrix.node-version }}
-            - run: corepack enable
-            - run: corepack prepare --activate pnpm@7.2.1
-            - run: pnpm config set store-dir .pnpm-store
-            - run: pnpm install --force
-            - run: pnpm test
+                  node-version: "${{ matrix.node-version }}"
+            - run: "corepack enable"
+            - run: "corepack prepare --activate pnpm@7.2.1"
+            - run: "pnpm config set store-dir .pnpm-store"
+            - run: "pnpm install --force"
+            - run: "pnpm test"
