--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+---
 name: CI
 on:
     pull_request:
@@ -8,6 +9,7 @@ on:
     push:
         branches:
             - main
+    workflow_dispatch: {}
 jobs:
     test:
         name: "Node.js ${{ matrix.node-version }}"
