--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,15 @@
 ---
 name: CI
 on:
-    - pull_request
-    - push
-    - workflow_dispatch
+    pull_request:
+        types:
+            - opened
+            - reopened
+            - synchronize
+    push:
+        branches:
+            - main
+    workflow_dispatch: {}
 jobs:
     test:
         name: "Node.js ${{ matrix.node-version }}"
