refactor!: switch back to js extension

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"engines": {
 		"node": ">= 16"
 	},
-	"main": "configs/index.cjs",
+	"main": "configs/index.js",
 	"keywords": [
 		"check",
 		"checker",
@@ -71,8 +71,8 @@
 		"ignore-sync": "ignore-sync .",
 		"install:clean": "yarn clean && yarn install",
 		"lint": "echo 'Linting ...'; yarn eslint --ext .cjs,.cts,.html,.js,.jsx,.md,.mjs,.mts,.ts,.tsx,.vue .",
-		"lint:config": "yarn eslint:config configs/index.cjs",
-		"prepare": "scripts/is-dependency.cjs || is-ci || husky install",
+		"lint:config": "yarn eslint:config configs/index.js",
+		"prepare": "scripts/is-dependency.js || is-ci || husky install",
 		"prettier": "prettier -u",
 		"prettier:check": "yarn prettier -c",
 		"release": "bin/release.sh",
