--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,22 @@
 {
 	"compilerOptions": {
-		"newLine": "lf",
-		"noFallthroughCasesInSwitch": true,
-		"noImplicitReturns": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
+		"baseUrl": ".",
+		"esModuleInterop": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"lib": ["ESNext"],
+		"module": "ESNext",
+		"moduleResolution": "Node",
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
 		"strict": true,
-		"target": "es2018"
-	}
+		"target": "ESNext",
+		"useDefineForClassFields": true
+	},
+	"files": [
+		"lib/helpers.d.ts",
+		"tests/typescript/dummy.ts",
+		"tests/typescript/vue/dummy.vue"
+	]
 }
