fix: add lint-staged config to script override

--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
 		"install:clean": "yarn clean && yarn install",
 		"lint": "echo 'Linting ...'; yarn eslint --ext .js,.md,.ts,.vue .",
 		"lint:config": "yarn eslint:config configs/index.js",
-		"prepare": "scripts/is-dependency.js || is-ci || husky install",
+		"postinstall": "scripts/is-dependency.js || is-ci || husky install",
 		"prettier": "prettier -u",
 		"prettier:check": "yarn prettier -c",
 		"prettier:write": "yarn prettier -w",
@@ -137,6 +137,7 @@
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.0.3",
 		"node-gyp": "^9.1.0",
+		"pinst": "^3.0.0",
 		"postcss": "^8.4.14",
 		"postcss-html": "^1.5.0",
 		"postcss-scss": "^4.0.4",
