feat: update dependencies
- @typescript-eslint/eslint-plugin: 5.38.0 -> 5.40.0
- @typescript-eslint/parser: 5.38.0 -> 5.40.0
- eslint: 8.23.1 -> 8.25.0
- eslint-plugin-n: 15.2.5 -> 15.3.0
- eslint-plugin-unicorn: 43.0.2 -> 44.0.2
- eslint-plugin-vue: 9.5.1 -> 9.6.0
- typescript: 4.8.3 -> 4.8.4

--- a/.eslintignore
+++ b/.eslintignore
@@ -142,6 +142,19 @@ tags
 # Persistent undo
 [._]*.un~
 
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 # Windows thumbnail cache files
 Thumbs.db
 Thumbs.db:encryptable
@@ -298,10 +311,15 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+/.husky/_
 
-/.git
+*.iml
+.*ignore
+.*ignore-sync
+/.git*
 /.idea
 /.yarn
+/CHANGELOG.md
 /tests/full-config.json
 
 !.eslintrc.*
